# python-pro

./: .flake8  .gitignore  .pre-commit-config.yaml
.github/workflows/: main.yaml
homework_01/: Makefile  README  README.md  pyproject.toml
homework_01/src/: log_analyzer.py
homework_01/tests/: test_parser.py
homework_02/: pyproject.toml
homework_02/advanced/: buffer.py  callable-protocol.py  forward.py  generator.py  generic_class.py  never.py  never2.py  overload.py  overload_literal.py  paramspec.py  protocol.py  recursive.py  type.py  type_guard.py  typed_dict.py
homework_02/basic/: any.py  dict.py  final.py  kwargs.py  list.py  optional.py  parameter.py  return_int.py  tuple.py  typealias.py  union.py  variable.py
homework_04/: api.py  pyproject.toml  scoring.py  test.py
homework_05/: pyproject.toml
homework_05/src/: api.py  common.py  scoring.py  store.py
homework_05/tests/: test_api.py  test_fields.py  test_scoring.py
homework_06/: main.py  pyproject.toml
homework_06/domain/: services.py
homework_06/infrastructure/: orm.py  repositories.py  unit_of_work.py
homework_06/tests/: __init__.py
homework_06/tests/test_domain/: test_models.py  test_services.py
homework_06/tests/test_infrastructure/: test_database.py  test_orm.py  test_repository.py  test_unit_of_work.py
homework_07/: README.md  main.py  pyproject.toml  web_server.py
homework_07/tests/: __init__.py  test_server.py
homework_07/www/: index.html
homework_08/: Dockerfile  Makefile  pyproject.toml
homework_08/mysite/mysite/: settings.py
homework_08/mysite/polls/: models.py  tests.py  views.py
homework_08/mysite/polls/migrations/: 0001_initial.py
homework_08/mysite/polls/templates/polls/: detail.html  index.html  results.html
homework_09/: pyproject.toml
homework_10/: README.md
homework_10/app/: app.py
homework_11/: homework.ipynb  pyproject.toml
homework_12/: HW_12.ipynb
