[tool.poetry]
name = "homework-02"
version = "0.1.0"
description = ""
authors = ["Vladislav <vkozlov@nvidia.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
mypy = "^1.10.0"
pyright = "^1.1.366"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
