[tool.poetry]
name = "homework-04"
version = "0.1.0"
description = ""
authors = ["Vladislav <vlad.kv.2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pylint = "^3.2.6"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
