[tool.poetry]
name = "homework-05"
version = "0.1.0"
description = ""
authors = ["Vladislav <vlad.kv.2002@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src"}
]


[tool.poetry.dependencies]
python = "^3.12"
pytest-cov = "^5.0.0"
redis = "^5.0.8"
pytest-mock = "^3.14.0"
types-redis = "^4.6.0.20240903"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.0"
pyupgrade = "^3.15.2"
pylint = "^3.2.3"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
show_error_codes = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
exclude = ["scripts", "docs", "tests"]
disable_error_code = ["name-defined", "import-untyped"]
ignore_missing_imports = true
