[tool.poetry]
name = "homework-07"
version = "0.1.0"
description = "Реализовать сервер, частично реализующий протокол HTTP. Провести нагрузочное тестирование"
authors = ["Vladislav Kozlov <vlad.kv.2002@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
