[tool.poetry]
name = "homework-08"
version = "0.1.0"
description = ""
authors = ["Vladislav Kozlov <vlad.kv.2002@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
