[tool.poetry]
name = "homework-11"
version = "0.1.0"
description = "OTUS Python Pro Homework 11"
authors = ["Vladislav Kozlov <vlad.kv.2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.5"
matplotlib = "^3.10.1"
scipy = "^1.15.2"
pandas = "^2.2.3"
tqdm = "^4.67.1"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
